# reactor

./: .gitignore  Cargo.toml  README.md  build.rs  testinput.chaos
src/: chaoskit.capnp  consts.rs  main.rs  reactor.rs  reactor_client.rs
src/interop/: error.rs  mod.rs
src/types/: affine_transformation.rs  coloring_method.rs  mod.rs  particle.rs  point.rs  system.rs  transform.rs  variation.rs
src/variations/: mod.rs
